samples/_failures_safe/1761374140_dac75e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_442cdaa5.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_442cdaa5.c:116:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  116 |     uint32_t line_num
      |     ^~~~~~~~
./samples/SAFE/__tmp_442cdaa5.c:116:5: error: expected declaration or statement at end of input
